full functional todo list app for personal use.

--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Courier New', Courier, monospace;
+    font-family:monospace, 'Courier New', Courier ;
     box-sizing: border-box;
 }
-
+.title{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-bottom: 20px;
+}
 .container{
     width: 100%;
     min-height: 100vh;
     /* background-color: bisque; */
-    background: linear-gradient(135deg, #50699b, #4e085f);
+    background: linear-gradient(180deg, #202020, #6b5555);
     padding: 10px;
 }
 
@@ -19,6 +24,10 @@
     height: 30px;
 }
 
+.addicon{
+    width: 60%;
+    height: 60%;
+}
 .todo-app{
 
     width: 100%;
@@ -74,6 +83,57 @@ button{
     background: tomato;
     color:whitesmoke;
     border-radius: 30px;
-    font-size: 26px;
+    font-size: 16px;
     cursor: pointer;
+    
+}
+
+ul li{
+    list-style: none;
+    font-size: 20px;
+    padding: 15px 10px 15px 50px;
+    user-select: none;
+    cursor: pointer;
+    position: relative;
+    border: 1px solid black;
+    border-radius: 30px;
+}
+
+ul li::before{
+    content:"";
+    position: absolute;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background-image: url(img/circle.png);
+    background-size: cover;
+    background-position: center;
+    top: 16px;
+    left: 15px;
+}
+
+ul li.checked{
+    color: #5555558c;
+    text-decoration: line-through;
+}
+
+ul li.checked::before{
+    background-image: url(img/checked.png);
+}
+
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 40px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+ul li span:hover{
+    background:coral;
 }
