--- a/style.css
+++ b/style.css
@@ -124,8 +124,12 @@ ul li.checked::before{
 
 ul li span{
     position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     right: 0;
-    top: 5px;
+    margin-right: 10px;
+    top: 8px;
     width: 40px;
     height: 40px;
     font-size: 40px;
